SAK-50402 Portal publish now button visible if user has permission to publish the site
https://sakaiproject.atlassian.net/browse/SAK-50402