@@ -25,16 +25,15 @@ import java.io.IOException;
 import java.text.DateFormat;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import javax.annotation.Resource;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
@@ -42,14 +41,14 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.text.StringEscapeUtils;
 import org.sakaiproject.authz.api.Role;
-import org.sakaiproject.authz.cover.SecurityService;
-import org.sakaiproject.component.cover.ComponentManager;
-import org.sakaiproject.component.cover.ServerConfigurationService;
+import org.sakaiproject.authz.api.SecurityService;
+import org.sakaiproject.component.api.ServerConfigurationService;
+import org.sakaiproject.coursemanagement.api.CourseManagementService;
 import org.sakaiproject.coursemanagement.api.exception.IdNotFoundException;
 import org.sakaiproject.entity.api.ResourceProperties;
 import org.sakaiproject.entity.api.ResourcePropertiesEdit;
 import org.sakaiproject.event.api.Event;
-import org.sakaiproject.event.cover.EventTrackingService;
+import org.sakaiproject.event.api.EventTrackingService;
 import org.sakaiproject.exception.IdUnusedException;
 import org.sakaiproject.exception.PermissionException;
 import org.sakaiproject.portal.api.Portal;
@@ -68,29 +67,30 @@ import org.sakaiproject.profile2.logic.ProfileImageLogic;
 import org.sakaiproject.presence.api.PresenceService;
 import org.sakaiproject.site.api.Site;
 import org.sakaiproject.site.api.SitePage;
+import org.sakaiproject.site.api.SiteService;
 import org.sakaiproject.site.api.ToolConfiguration;
-import org.sakaiproject.site.cover.SiteService;
-import org.sakaiproject.thread_local.cover.ThreadLocalManager;
+import org.sakaiproject.thread_local.api.ThreadLocalManager;
 import org.sakaiproject.time.api.UserTimeService;
 import org.sakaiproject.tool.api.ActiveTool;
+import org.sakaiproject.tool.api.ActiveToolManager;
 import org.sakaiproject.tool.api.Session;
+import org.sakaiproject.tool.api.SessionManager;
 import org.sakaiproject.tool.api.Tool;
 import org.sakaiproject.tool.api.ToolException;
-import org.sakaiproject.tool.api.ToolManager;
 import org.sakaiproject.tool.api.ToolSession;
-import org.sakaiproject.tool.cover.ActiveToolManager;
-import org.sakaiproject.tool.cover.SessionManager;
 import org.sakaiproject.user.api.Preferences;
 import org.sakaiproject.user.api.PreferencesEdit;
+import org.sakaiproject.user.api.PreferencesService;
+import org.sakaiproject.user.api.UserDirectoryService;
 import org.sakaiproject.user.api.UserNotDefinedException;
-import org.sakaiproject.user.cover.PreferencesService;
-import org.sakaiproject.user.cover.UserDirectoryService;
 import org.sakaiproject.util.ResourceLoader;
 import org.sakaiproject.util.Validator;
 import org.sakaiproject.util.Web;
 import org.sakaiproject.util.RequestFilter;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.context.support.SpringBeanAutowiringSupport;
 
 
 /**
@@ -99,27 +99,13 @@ import lombok.extern.slf4j.Slf4j;
  * @version $Rev$
  */
 @Slf4j
-public class SiteHandler extends WorksiteHandler
-{
-
+public class SiteHandler extends WorksiteHandler {
 	private static final String INCLUDE_SITE_NAV = "include-site-nav";
-
 	private static final String INCLUDE_LOGO = "include-logo";
-
 	private static final String INCLUDE_TABS = "include-tabs";
 
-	// Cannot be static to allow for this class to be extended at a different fragment
-	protected String URL_FRAGMENT = "site";
+	private static final ResourceLoader rb = new ResourceLoader("sitenav");
 
-	private static ResourceLoader rb = new ResourceLoader("sitenav");
-	
-	// When these strings appear in the URL they will be replaced by a calculated value based on the context.
-	// This can be replaced by the users myworkspace.
-	private String mutableSitename ="-";
-	// This can be replaced by the page on which a tool appears.
-	private String mutablePagename ="-";
-
-	// SAK-29180 - Normalize the properties, keeping the legacy pda sakai.properties names through Sakai-11 at least
 	private static final String BYPASS_URL_PROP = "portal.bypass";
 	private static final String LEGACY_BYPASS_URL_PROP = "portal.pda.bypass";
 	private static final String DEFAULT_BYPASS_URL = "\\.jpg$|\\.gif$|\\.js$|\\.png$|\\.jpeg$|\\.prf$|\\.css$|\\.zip$|\\.pdf\\.mov$|\\.json$|\\.jsonp$\\.xml$|\\.ajax$|\\.xls$|\\.xlsx$|\\.doc$|\\.docx$|uvbview$|linktracker$|hideshowcolumns$|scormplayerpage$|scormcompletionpage$";
@@ -149,24 +135,39 @@ public class SiteHandler extends WorksiteHandler
 	private static final String SAK_PROP_SHOW_SITE_LABELS = "portal.siteList.siteLabels";
 	private static final boolean SAK_PROP_SHOW_SITE_LABELS_DFLT = true;
 
-	private static final long AUTO_FAVORITES_REFRESH_INTERVAL_MS = 30000;
-
-	protected ProfileImageLogic imageLogic;
-	private org.sakaiproject.coursemanagement.api.CourseManagementService cms = (org.sakaiproject.coursemanagement.api.CourseManagementService) ComponentManager.get(org.sakaiproject.coursemanagement.api.CourseManagementService.class);
-
+	@Autowired private CourseManagementService courseManagementService;
+	@Autowired private ActiveToolManager toolManager;
+	@Autowired private EventTrackingService eventTrackingService;
+	@Autowired private PreferencesService preferencesService;
+	@Autowired private PresenceService presenceService;
+	@Autowired private ProfileImageLogic profileImageLogic;
+	@Autowired private SecurityService securityService;
+	@Autowired private ServerConfigurationService serverConfigurationService;
+	@Autowired private SessionManager sessionManager;
+	@Autowired private SiteService siteService;
+	@Autowired private ThreadLocalManager threadLocalManager;
+	@Autowired private UserDirectoryService userDirectoryService;
+	@Resource(name = "org.sakaiproject.time.api.UserTimeService")
 	private UserTimeService userTimeService;
 
-	public SiteHandler()
-	{
-		// Allow any sub-classes to register their own URL_FRAGMENT
-		// https://stackoverflow.com/questions/41566202/possible-to-avoid-default-call-to-super-in-java
+	// When these strings appear in the URL they will be replaced by a calculated value based on the context.
+	// This can be replaced by the users myworkspace.
+	private final String mutableSitename;
+	// This can be replaced by the page on which a tool appears.
+	private final String mutablePagename;
+
+	// Cannot be static to allow for this class to be extended at a different fragment
+	protected String URL_FRAGMENT = "site";
+
+	public SiteHandler() {
+		SpringBeanAutowiringSupport.processInjectionBasedOnCurrentContext(this);
+
+		mutableSitename =  serverConfigurationService.getString("portal.mutable.sitename", "-");
+		mutablePagename =  serverConfigurationService.getString("portal.mutable.pagename", "-");
+
 		if(this.getClass() == SiteHandler.class) {
 			setUrlFragment(URL_FRAGMENT);
 		}
-		mutableSitename =  ServerConfigurationService.getString("portal.mutable.sitename", "-");
-		mutablePagename =  ServerConfigurationService.getString("portal.mutable.pagename", "-");
-		imageLogic = ComponentManager.get(ProfileImageLogic.class);
-		userTimeService = ComponentManager.get(UserTimeService.class);
 	}
 
 	@Override
@@ -221,7 +222,6 @@ public class SiteHandler extends WorksiteHandler
 		// 0 1 2 3 4
 		if ((siteId != null) && (parts.length == 5) && (parts[3].equals("tool-reset")))
 		{
-			toolId = parts[4];
 			String toolUrl = req.getContextPath() + "/site/" + siteId + "/tool"
 					+ Web.makePath(parts, 4, parts.length);
 			portalService.setResetState("true");
@@ -237,7 +237,7 @@ public class SiteHandler extends WorksiteHandler
 		if ((siteId != null) && (parts.length == 5) && (parts[3].equals("page-reset")))
 		{
 			pageId = parts[4];
-			Site site = null;
+			Site site;
 			try
 			{
 				// This should understand aliases as well as IDs
@@ -254,14 +254,12 @@ public class SiteHandler extends WorksiteHandler
 			boolean hasJSR168 = false;
 			if (page != null)
 			{
-				Session s = SessionManager.getCurrentSession();
-				Iterator<ToolConfiguration> toolz = page.getTools().iterator();
-				while(toolz.hasNext()){
-					ToolConfiguration pageTool = toolz.next();
-					ToolSession ts = s.getToolSession(pageTool.getId());
-					ts.clearAttributes();
-					if ( portal.isPortletPlacement(pageTool) ) hasJSR168 = true;
-				}
+				Session s = sessionManager.getCurrentSession();
+                for (ToolConfiguration tool : page.getTools()) {
+                    ToolSession ts = s.getToolSession(tool.getId());
+                    ts.clearAttributes();
+                    if (portal.isPortletPlacement(tool)) hasJSR168 = true;
+                }
 			}
 
 			String pageUrl = URLUtils.sanitisePath(req.getContextPath() + "/site/" + siteId + "/page"
@@ -306,18 +304,18 @@ public class SiteHandler extends WorksiteHandler
 				siteId = portal.getSiteHelper().getGatewaySiteId();
 				if (siteId == null)
 				{
-					siteId = ServerConfigurationService.getGatewaySiteId();
+					siteId = serverConfigurationService.getGatewaySiteId();
 				}
 			}
 			else
 			{
 				// TODO Should maybe switch to portal.getSiteHelper().getMyWorkspace()
-				AllSitesViewImpl allSites = (AllSitesViewImpl) portal.getSiteHelper().getSitesView(SiteView.View.ALL_SITES_VIEW, req, session, siteId);
+				AllSitesViewImpl allSites = (AllSitesViewImpl) portal.getSiteHelper().getSitesView(SiteView.View.ALL_SITES_VIEW, req, session, null);
 				List<Map> sites = (List<Map>) allSites.getRenderContextObject();
-				if (sites.size() > 0) {
+				if (!sites.isEmpty()) {
 					siteId = (String) sites.get(0).get("siteId");
 				} else {
-					siteId = SiteService.getUserSiteId(userId);
+					siteId = siteService.getUserSiteId(userId);
 				}
 			}
 		}
@@ -329,30 +327,25 @@ public class SiteHandler extends WorksiteHandler
 		
 		// check for a mutable site to be resolved here
 		if (mutableSitename.equalsIgnoreCase(siteId) && (session.getUserId() != null)) {
-			siteId = SiteService.getUserSiteId(userId);
+			siteId = siteService.getUserSiteId(userId);
 		}
 
 		// find the site, for visiting
 		boolean siteDenied = false;
 		Site site = null;
-		try
-		{
+		try {
 			// This should understand aliases as well as IDs
 			site = portal.getSiteHelper().getSiteVisit(siteId);
-			
+
 			// SAK-20509 remap the siteId from the Site object we now have, since it may have originally been an alias, but has since been translated.
 			siteId = site.getId();
-			
-		}
-		catch (IdUnusedException e)
-		{
-		}
-		catch (PermissionException e)
-		{
-			if (ServerConfigurationService.getBoolean("portal.redirectJoin", true) &&
-					userId != null && portal.getSiteHelper().isJoinable(siteId, userId))
-			{
-				String redirectUrl = Web.returnUrl(req, "/join/"+siteId);
+
+		} catch (IdUnusedException e) {
+			log.debug("Site [{}] not found", siteId);
+		} catch (PermissionException e) {
+			if (serverConfigurationService.getBoolean("portal.redirectJoin", true) &&
+					userId != null && portal.getSiteHelper().isJoinable(siteId, userId)) {
+				String redirectUrl = Web.returnUrl(req, "/join/" + siteId);
 				res.addHeader("Cache-Control", "no-cache");
 				res.sendRedirect(redirectUrl);
 				return;
@@ -380,8 +373,8 @@ public class SiteHandler extends WorksiteHandler
 				// It is also helpful for event log analysis for user trouble or bad behavior.
 				if (siteDenied)
 				{
-					Event event = EventTrackingService.newEvent(SiteService.EVENT_SITE_VISIT_DENIED, siteId, false);
-					EventTrackingService.post(event);
+					Event event = eventTrackingService.newEvent(SiteService.EVENT_SITE_VISIT_DENIED, siteId, false);
+					eventTrackingService.post(event);
 				}
 				portal.doError(req, res, session, Portal.ERROR_SITE);
 			}
@@ -389,7 +382,7 @@ public class SiteHandler extends WorksiteHandler
 		}
 		
 		// Supports urls like: /portal/site/{SITEID}/sakai.announcements
-		if (site != null && commonToolId != null)
+		if (commonToolId != null)
 		{
 			ToolConfiguration tc = null;
 			if(!commonToolId.startsWith("sakai."))
@@ -410,8 +403,8 @@ public class SiteHandler extends WorksiteHandler
 		}
 
 		// Find the pageId looking backwards through the toolId
-		if (site != null && pageId == null && toolId != null ) {
-			SitePage p = (SitePage) ToolUtils.getPageForTool(site, toolId);
+		if (pageId == null && toolId != null) {
+			SitePage p = ToolUtils.getPageForTool(site, toolId);
 			if ( p != null ) pageId = p.getId();
 		}
 
@@ -431,8 +424,8 @@ public class SiteHandler extends WorksiteHandler
 		session.removeAttribute(Portal.ATTR_SITE_PAGE + siteId);
 
 		// SAK-29138 - form a context sensitive title
-		List<String> providers = PortalSiteHelperImpl.getProviderIDsForSites(((List<Site>) Arrays.asList(new Site[] { site }))).get(site.getReference());
-		String title = ServerConfigurationService.getString("ui.service","Sakai") + " : "
+		List<String> providers = PortalSiteHelperImpl.getProviderIDsForSites(List.of(site)).get(site.getReference());
+		String title = serverConfigurationService.getString("ui.service","Sakai") + " : "
 				+ portal.getSiteHelper().getUserSpecificSiteTitle(site, false, false, providers);
 
 		// Lookup the page in the site - enforcing access control
@@ -443,7 +436,7 @@ public class SiteHandler extends WorksiteHandler
 		}
 
 		// Check for incomplete URLs in the case of inlined tools
-		boolean trinity = ServerConfigurationService.getBoolean(ToolUtils.PORTAL_INLINE_EXPERIMENTAL, ToolUtils.PORTAL_INLINE_EXPERIMENTAL_DEFAULT);
+		boolean trinity = serverConfigurationService.getBoolean(ToolUtils.PORTAL_INLINE_EXPERIMENTAL, ToolUtils.PORTAL_INLINE_EXPERIMENTAL_DEFAULT);
 		if (trinity && toolId == null) {
 			String pagerefUrl = ToolUtils.getPageUrl(req, site, page, getUrlFragment(),
 				false, null, null);
@@ -452,7 +445,7 @@ public class SiteHandler extends WorksiteHandler
 			if ( pieces.length > 6 && "tool".equals(pieces[6]) ) {
 				String queryString = req.getQueryString();
 				if ( queryString != null ) pagerefUrl = URLUtils.sanitisePath(pagerefUrl) + '?' + queryString;
-				log.debug("Redirecting tool inline url: "+pagerefUrl);
+				log.debug("Redirecting tool inline url: {}", pagerefUrl);
 				res.addHeader("Cache-Control", "no-cache");
 				res.sendRedirect(pagerefUrl);
 				return;
@@ -468,13 +461,13 @@ public class SiteHandler extends WorksiteHandler
 
 		ToolConfiguration siteTool = null;
 		if ( toolId != null ) {
-			siteTool = SiteService.findTool(toolId);
+			siteTool = siteService.findTool(toolId);
 			if ( siteTool != null && parts.length >= 5 ) {
 				commonToolId = siteTool.getToolId();
 
 				// Does the tool allow us to buffer?
-				allowBuffer = allowBufferContent(req, site, siteTool);
-				log.debug("allowBuffer="+allowBuffer+" url="+req.getRequestURL());
+				allowBuffer = allowBufferContent(site, siteTool);
+				log.debug("allowBuffer={} url={}", allowBuffer, req.getRequestURL());
 
 				if ( allowBuffer ) {
 					TCP = req.getContextPath() + req.getServletPath() + Web.makePath(parts, 1, 5);
@@ -485,14 +478,14 @@ public class SiteHandler extends WorksiteHandler
 
 					if ( matched ) {
 						log.debug("Bypassing buffer to forwardTool per configuration");
-						ActiveTool tool = ActiveToolManager.getActiveTool(commonToolId);
+						ActiveTool tool = toolManager.getActiveTool(commonToolId);
 						portal.forwardTool(tool, req, res, siteTool,
 							siteTool.getSkin(), TCP, toolPathInfo);
 						return;
 					}
 					// Inform calls to includeTool() that the default is 
 					// this thread is inlining a tool.
-					ThreadLocalManager.set("sakai:inline-tool","true");
+					threadLocalManager.set("sakai:inline-tool","true");
 				}
 			}
 		}
@@ -505,8 +498,8 @@ public class SiteHandler extends WorksiteHandler
 				.getSkin(), req, site);
 
 		if (userId != null) {
-			final Preferences readOnlyPrefs = PreferencesService.getPreferences(userId);
-			final ResourceProperties siteNavProps = readOnlyPrefs.getProperties(org.sakaiproject.user.api.PreferencesService.SITENAV_PREFS_KEY);
+			final Preferences readOnlyPrefs = preferencesService.getPreferences(userId);
+			final ResourceProperties siteNavProps = readOnlyPrefs.getProperties(PreferencesService.SITENAV_PREFS_KEY);
 			final String currentExpanded = siteNavProps.getProperty(PortalConstants.PROP_CURRENT_EXPANDED);
 			final String expandedSite = siteNavProps.getProperty(PortalConstants.PROP_EXPANDED_SITE);
 
@@ -514,20 +507,20 @@ public class SiteHandler extends WorksiteHandler
 			if (!StringUtils.equals(currentExpanded, "true") || !StringUtils.equals(expandedSite, siteId)) {
 				PreferencesEdit prefs = null;
 				try {
-					prefs = PreferencesService.edit(userId);
-					ResourcePropertiesEdit props = prefs.getPropertiesEdit(org.sakaiproject.user.api.PreferencesService.SITENAV_PREFS_KEY);
+					prefs = preferencesService.edit(userId);
+					ResourcePropertiesEdit props = prefs.getPropertiesEdit(PreferencesService.SITENAV_PREFS_KEY);
 					props.addProperty(PortalConstants.PROP_CURRENT_EXPANDED, "true");
 					props.addProperty(PortalConstants.PROP_EXPANDED_SITE, siteId);
 
-					boolean themeEnabled = ServerConfigurationService.getBoolean(PortalConstants.PROP_PORTAL_THEMES, true);
+					boolean themeEnabled = serverConfigurationService.getBoolean(PortalConstants.PROP_PORTAL_THEMES, true);
 					if (!themeEnabled) {
-						prefs.getPropertiesEdit(org.sakaiproject.user.api.PreferencesService.USER_SELECTED_UI_THEME_PREFS).addProperty("theme", "sakaiUserTheme-notSet");
+						prefs.getPropertiesEdit(PreferencesService.USER_SELECTED_UI_THEME_PREFS).addProperty("theme", "sakaiUserTheme-notSet");
 					}
 				} catch (Exception any) {
 					log.warn("Exception caught whilst setting expanded navigation or theme properties: {}", any.toString());
-					if (prefs != null) PreferencesService.cancel(prefs);
+					if (prefs != null) preferencesService.cancel(prefs);
 				} finally {
-					if (prefs != null) PreferencesService.commit(prefs);
+					if (prefs != null) preferencesService.commit(prefs);
 				}
 			}
 		}
@@ -565,23 +558,23 @@ public class SiteHandler extends WorksiteHandler
 				StringBuffer queryUrl = req.getRequestURL();
 				String queryString = req.getQueryString();
 				if ( queryString != null ) queryUrl.append('?').append(queryString);
-				log.debug("It is tacky to return markup on a POST CTI="+commonToolId+" URL="+queryUrl);
+				log.debug("It is tacky to return markup on a POST CTI={} URL={}", commonToolId, queryUrl);
 			}
 			log.debug("BufferedResponse success");
 			rcontext.put("bufferedResponse", Boolean.TRUE);
 			Map<String,String> bufferMap = (Map<String,String>) BC;
-			rcontext.put("responseHead", (String) bufferMap.get("responseHead"));
-			rcontext.put("responseBody", (String) bufferMap.get("responseBody"));
+			rcontext.put("responseHead", bufferMap.get("responseHead"));
+			rcontext.put("responseBody", bufferMap.get("responseBody"));
 		}
 
 		rcontext.put("siteId", siteId);
-		boolean showShortDescription = Boolean.valueOf(ServerConfigurationService.getBoolean("portal.title.shortdescription.show", false));
+		boolean showShortDescription = serverConfigurationService.getBoolean("portal.title.shortdescription.show", false);
 
 		if (showShortDescription) {
 			rcontext.put("shortDescription", Web.escapeHtml(site.getShortDescription()));
 		}
 		
-		if (SiteService.isUserSite(siteId)){
+		if (siteService.isUserSite(siteId)){
 			rcontext.put("siteTitle", rb.getString("sit_mywor") );
 			rcontext.put("siteUrl", site.getUrl());
 			rcontext.put("siteTitleTruncated", rb.getString("sit_mywor") );
@@ -593,12 +586,12 @@ public class SiteHandler extends WorksiteHandler
 			rcontext.put("isUserSite", false);
 		}
 		
-		rcontext.put("showFavStarsInSitesBar",ServerConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS, SAK_PROP_SHOW_FAV_STARS_DFLT));
-		rcontext.put("showFavStarsOnAllFavSites",ServerConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS_ON_ALL, SAK_PROP_SHOW_FAV_STARS_ON_ALL_DFLT));
+		rcontext.put("showFavStarsInSitesBar", serverConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS, SAK_PROP_SHOW_FAV_STARS_DFLT));
+		rcontext.put("showFavStarsOnAllFavSites", serverConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS_ON_ALL, SAK_PROP_SHOW_FAV_STARS_ON_ALL_DFLT));
 
-		rcontext.put("showSiteLabels",ServerConfigurationService.getBoolean(SAK_PROP_SHOW_SITE_LABELS, SAK_PROP_SHOW_SITE_LABELS_DFLT));
-		
-		rcontext.put("activePageId", page.getId());
+		rcontext.put("showSiteLabels", serverConfigurationService.getBoolean(SAK_PROP_SHOW_SITE_LABELS, SAK_PROP_SHOW_SITE_LABELS_DFLT));
+
+		rcontext.put("activePageId", page != null ? page.getId() : null);
 
 		addLocale(rcontext, site, session.getUserId());
 
@@ -611,23 +604,19 @@ public class SiteHandler extends WorksiteHandler
 
 		portal.includeBottom(rcontext, site);
 
-		//Log the visit into SAKAI_EVENT - begin
-		try{
-			boolean presenceEvents = ServerConfigurationService.getBoolean("presence.events.log", true);
-			if (presenceEvents)
-				org.sakaiproject.presence.cover.PresenceService.setPresence(siteId + PresenceService.PRESENCE_SUFFIX);
-		}catch(Exception e){}
-		//End - log the visit into SAKAI_EVENT		
+		boolean presenceEvents = serverConfigurationService.getBoolean("presence.events.log", true);
+		if (presenceEvents) presenceService.setPresence(siteId + PresenceService.PRESENCE_SUFFIX);
 
 		rcontext.put("currentUrlPath", RequestFilter.serverUrl(req) + req.getContextPath()
 				+ URLUtils.getSafePathInfo(req));
 
-		rcontext.put("usePortalSearch", ServerConfigurationService.getBoolean("portal.search.enabled", true)
-		    && ServerConfigurationService.getBoolean("search.enable", false));
-		rcontext.put("portalSearchPageSize", ServerConfigurationService.getString("portal.search.pageSize", "10"));
+		rcontext.put("usePortalSearch", serverConfigurationService.getBoolean("portal.search.enabled", true)
+		    && serverConfigurationService.getBoolean("search.enable", false));
+		rcontext.put("portalSearchPageSize", serverConfigurationService.getString("portal.search.pageSize", "10"));
 
+		rcontext.put("publishSiteButton", siteService.allowUpdateSite(siteId));
 		//Show a confirm dialog when publishing an unpublished site.
-		rcontext.put("publishSiteDialogEnabled", ServerConfigurationService.getBoolean("portal.publish.site.confirm.enabled", false));
+		rcontext.put("publishSiteDialogEnabled", serverConfigurationService.getBoolean("portal.publish.site.confirm.enabled", false));
 		Map<String, String> toolTitles = new HashMap<>();
 		site.getPages().forEach(pageNow -> {
 
@@ -652,9 +641,9 @@ public class SiteHandler extends WorksiteHandler
 			}
 		} else if (StringUtils.equals(site.getProperties().getProperty("publish_type"), "auto")) {	// automatically-managed publishing
 			try {
-				if (cms.getAcademicSession(site.getProperties().getProperty("term_eid")).getStartDate() != null) {
-					long leadtime = ServerConfigurationService.getInt("course_site_publish_service.num_days_before_term_starts", 0) * 1000L * 60L * 60L * 24L;
-					Date publishDate = new Date(cms.getAcademicSession(site.getProperties().getProperty("term_eid")).getStartDate().getTime() - leadtime);
+				if (courseManagementService.getAcademicSession(site.getProperties().getProperty("term_eid")).getStartDate() != null) {
+					long leadtime = serverConfigurationService.getInt("course_site_publish_service.num_days_before_term_starts", 0) * 1000L * 60L * 60L * 24L;
+					Date publishDate = new Date(courseManagementService.getAcademicSession(site.getProperties().getProperty("term_eid")).getStartDate().getTime() - leadtime);
 					if (publishDate.toInstant().isAfter(Instant.now())) {
 						rcontext.put("scheduledate", userTimeService.dateFormat(publishDate, rb.getLocale(), DateFormat.LONG));
 					} else {
@@ -680,9 +669,7 @@ public class SiteHandler extends WorksiteHandler
 			}
 		}
 
-
-
-		doSendResponse(rcontext, res, null);
+		doSendResponse(rcontext, res);
 
 		StoredState ss = portalService.getStoredState();
 		if (ss != null && toolContextPath.equals(ss.getToolContextPath()))
@@ -719,7 +706,7 @@ public class SiteHandler extends WorksiteHandler
 
 			}
 			catch (Exception e) {
-				log.error("exception resolving page id from toolid :["+toolId+"]",e);
+				log.error("exception resolving page id from toolid :[{}]",toolId, e);
 			}
 
 		return pageId;
@@ -735,9 +722,7 @@ public class SiteHandler extends WorksiteHandler
 	 * @param b
 	 * @throws IOException
 	 */
-	protected void doSendResponse(PortalRenderContext rcontext, HttpServletResponse res,
-			String contentType) throws IOException
-	{
+	protected void doSendResponse(PortalRenderContext rcontext, HttpServletResponse res) throws IOException {
 		portal.sendResponse(rcontext, res, "site", null);
 	}
 
@@ -746,44 +731,37 @@ public class SiteHandler extends WorksiteHandler
 		if (rcontext.uses(INCLUDE_SITE_NAV))
 		{
 			boolean loggedIn = session.getUserId() != null;
-			boolean topLogin = ServerConfigurationService.getBoolean("top.login", true);
-			String accessibilityURL = ServerConfigurationService.getString("accessibility.url");
+			boolean topLogin = serverConfigurationService.getBoolean("top.login", true);
+			String accessibilityURL = serverConfigurationService.getString("accessibility.url");
 
-			rcontext.put("siteNavHasAccessibilityURL", Boolean.valueOf((accessibilityURL != null && !accessibilityURL.equals(""))));
+			rcontext.put("siteNavHasAccessibilityURL", accessibilityURL != null && !accessibilityURL.isEmpty());
 			rcontext.put("siteNavAccessibilityURL", accessibilityURL);
-			rcontext.put("siteNavTopLogin", Boolean.valueOf(topLogin));
-			rcontext.put("siteNavLoggedIn", Boolean.valueOf(loggedIn));
+			rcontext.put("siteNavTopLogin", topLogin);
+			rcontext.put("siteNavLoggedIn", loggedIn);
 			rcontext.put("currentSiteId", siteId);
 			rcontext.put("sidebarSites", portal.getSiteHelper().getContextSitesWithPages(req, siteId, null, loggedIn));
 
-			try
-			{
-				if (loggedIn)
-				{
-					includeLogo(rcontext, req, session, siteId);
+			try {
+				includeLogo(rcontext, req, session, siteId);
+				if (loggedIn) {
 					includeTabs(rcontext, req, session, siteId, toolId, getUrlFragment(), false);
-					rcontext.put("picEditorEnabled", imageLogic.isPicEditorEnabled());
-				}
-				else
-				{
-					includeLogo(rcontext, req, session, siteId);
-					if (portal.getSiteHelper().doGatewaySiteList())
+					rcontext.put("picEditorEnabled", profileImageLogic.isPicEditorEnabled());
+				} else {
+					if (portal.getSiteHelper().doGatewaySiteList()) {
 						includeTabs(rcontext, req, session, siteId, toolId, getUrlFragment(), false);
+					}
 				}
-			}
-			catch (Exception e)
-			{
+			} catch (Exception e) {
 				log.warn("constructing logo and tabs, {}", e.toString());
 			}
 		}
 	}
 
-	public void includeLogo(PortalRenderContext rcontext, HttpServletRequest req, Session session, String siteId) throws IOException
-	{
+	public void includeLogo(PortalRenderContext rcontext, HttpServletRequest req, Session session, String siteId) {
 		if (rcontext.uses(INCLUDE_LOGO))
 		{
 			String skin = getSiteSkin(siteId);
-			String skinRepo = ServerConfigurationService.getString("skin.repo");
+			String skinRepo = serverConfigurationService.getString("skin.repo");
 			rcontext.put("logoSkin", skin);
 			rcontext.put("logoSkinRepo", skinRepo);
 			portal.includeLogin(rcontext, req, session);
@@ -793,26 +771,26 @@ public class SiteHandler extends WorksiteHandler
 	private String getSiteSkin(String siteId)
 	{
 		// First, try to get the skin the default way
-		String skin = SiteService.getSiteSkin(siteId);
+		String skin = siteService.getSiteSkin(siteId);
 		// If this fails, try to get the real site id if the site is a user site
-		if (skin == null && SiteService.isUserSite(siteId))
+		if (skin == null && siteService.isUserSite(siteId))
 		{
 			try
 			{
-				String userId = SiteService.getSiteUserId(siteId);
+				String userId = siteService.getSiteUserId(siteId);
 				
 				// If the passed siteId is the users EID, convert it to the internal ID.
 				// Most lookups should be EID, if most URLs contain internal ID, this results in lots of cache misses.
 				try
 				{
-					userId = UserDirectoryService.getUserId(userId);
+					userId = userDirectoryService.getUserId(userId);
 				}
 				catch (UserNotDefinedException unde)
 				{
 					// Ignore
 				}
-				String alternateSiteId = SiteService.getUserSiteId(userId);
-				skin = SiteService.getSiteSkin(alternateSiteId);
+				String alternateSiteId = siteService.getUserSiteId(userId);
+				skin = siteService.getSiteSkin(alternateSiteId);
 			}
 			catch (Exception e)
 			{
@@ -822,15 +800,13 @@ public class SiteHandler extends WorksiteHandler
 
 		if (skin == null)
 		{
-			skin = ServerConfigurationService.getString("skin.default");
+			skin = serverConfigurationService.getString("skin.default");
 		}
 		return skin;
 	}
 
 	public void includeTabs(PortalRenderContext rcontext, HttpServletRequest req,
-			Session session, String siteId, String toolId, String prefix, boolean addLogout)
-			throws IOException
-	{
+			Session session, String siteId, String toolId, String prefix, boolean addLogout) {
 
 		if (rcontext.uses(INCLUDE_TABS))
 		{
@@ -839,7 +815,7 @@ public class SiteHandler extends WorksiteHandler
 
 			// If we have turned on auto-state reset on navigation, we generate
 			// the "site-reset" "worksite-reset" and "gallery-reset" urls
-			if ("true".equalsIgnoreCase(ServerConfigurationService.getString(Portal.CONFIG_AUTO_RESET)))
+			if ("true".equalsIgnoreCase(serverConfigurationService.getString(Portal.CONFIG_AUTO_RESET)))
 			{
 				prefix = prefix + "-reset";
 			}
@@ -848,12 +824,12 @@ public class SiteHandler extends WorksiteHandler
 			
 			// Check to see if we display a link in the UI for swapping the view
 			boolean roleswapcheck = false; // This variable will tell the UI if we will display any role swapping component; false by default
-			String roleswitchvalue = SecurityService.getUserEffectiveRole(); // checks the session for a role swap value
-			boolean roleswitchstate = SecurityService.isUserRoleSwapped(); // This variable determines if the site is in the switched state or not; false by default
-			boolean allowroleswap = SiteService.allowRoleSwap(siteId) && !SecurityService.isSuperUser();
+			String roleswitchvalue = securityService.getUserEffectiveRole(); // checks the session for a role swap value
+			boolean roleswitchstate = securityService.isUserRoleSwapped(); // This variable determines if the site is in the switched state or not; false by default
+			boolean allowroleswap = siteService.allowRoleSwap(siteId) && !securityService.isSuperUser();
 
 			if (roleswitchvalue != null) {
-				String switchRoleUrl = ServerConfigurationService.getPortalUrl()
+				String switchRoleUrl = serverConfigurationService.getPortalUrl()
 						+ "/role-switch-out/"
 						+ siteId
 						+ "/tool/"
@@ -866,7 +842,7 @@ public class SiteHandler extends WorksiteHandler
 			// check for the site.roleswap permission
 			else if (allowroleswap)
 			{
-				Site activeSite = null;
+				Site activeSite;
 	            try
 	            {
 	            	activeSite = portal.getSiteHelper().getSiteVisit(siteId); // active site
@@ -887,59 +863,58 @@ public class SiteHandler extends WorksiteHandler
 				Set<Role> roles = activeSite.getRoles();
 				Role userRole = activeSite.getUserRole(session.getUserId()); // the user's role in the site
 
-				String externalRoles = ServerConfigurationService.getString("studentview.roles"); // get the roles that can be swapped to from sakai.properties
+				String externalRoles = serverConfigurationService.getString("studentview.roles"); // get the roles that can be swapped to from sakai.properties
 				String[] svRoles = externalRoles.split(",");
-				List<String> svRolesFinal = new ArrayList<String>();
+				List<String> svRolesFinal = new ArrayList<>();
 
 				for (Role role : roles) {
-					for (int i = 0; i < svRoles.length; i++) {
-						if (svRoles[i].trim().equals(role.getId())) {
-							roleInSite = true;
-							svRolesFinal.add(role.getId());
-						}
-					}
+                    for (String svRole : svRoles) {
+                        if (svRole.trim().equals(role.getId())) {
+                            roleInSite = true;
+                            svRolesFinal.add(role.getId());
+                        }
+                    }
 				}
 
 				// The type check filters out some of non-standard sites where swapping roles would not apply.
 				// The roleInSite check makes sure a role is in the site
 				// The current user role can't be one of the roles to be swapped
 				if (activeSite.getType() != null && roleInSite) {
-					String switchRoleUrl = "";
+					String switchRoleUrl;
 
-					//if the userRole is null, this means they are more than likely a Delegated Access user.  Since the security check has already allowed
-					//the user to "swaproles" @allowroleswap, we know they have access to this site
-					if (roleswitchvalue == null) {
-						if (svRolesFinal.size() > 1) {
-							rcontext.put("roleswapdropdown", true);
-							switchRoleUrl = ServerConfigurationService.getPortalUrl()
-									+ "/role-switch/"
-									+ siteId
-									+ "/tool/"
-									+ toolId
-									+ "/";
+					// if the userRole is null, this means they are more than likely a Delegated Access user.
+					// Since the security check has already allowed
+					// the user to "swaproles" @allowroleswap, we know they have access to this site
+                    if (svRolesFinal.size() > 1) {
+                        rcontext.put("roleswapdropdown", true);
+                        switchRoleUrl = serverConfigurationService.getPortalUrl()
+                                + "/role-switch/"
+                                + siteId
+                                + "/tool/"
+                                + toolId
+                                + "/";
 
-							rcontext.put("panelString", "/?panel=Main");
-						} else {
-							rcontext.put("roleswapdropdown", false);
-							switchRoleUrl = ServerConfigurationService.getPortalUrl()
-									+ "/role-switch/"
-									+ siteId
-									+ "/tool/"
-									+ toolId
-									+ "/"
-									+ svRolesFinal.get(0)
-									+ "/?panel=Main";
-							rcontext.put("roleUrlValue", svRolesFinal.get(0));
-						}
-					}
-					// We'll show the swap role snippet if the current user role is not in "studentview.roles"
+                        rcontext.put("panelString", "/?panel=Main");
+                    } else {
+                        rcontext.put("roleswapdropdown", false);
+                        switchRoleUrl = serverConfigurationService.getPortalUrl()
+                                + "/role-switch/"
+                                + siteId
+                                + "/tool/"
+                                + toolId
+                                + "/"
+                                + svRolesFinal.get(0)
+                                + "/?panel=Main";
+                        rcontext.put("roleUrlValue", svRolesFinal.get(0));
+                    }
+                    // We'll show the swap role snippet if the current user role is not in "studentview.roles"
 					roleswapcheck = !svRolesFinal.contains(userRole.getId());
 					rcontext.put("siteRoles", svRolesFinal);
 					rcontext.put("switchRoleUrl", switchRoleUrl);
 				}
 			}
 			
-			rcontext.put("viewAsStudentLink", Boolean.valueOf(roleswapcheck)); // this will tell our UI if we want the link for swapping roles to display
+			rcontext.put("viewAsStudentLink", roleswapcheck); // this will tell our UI if we want the link for swapping roles to display
 			rcontext.put("roleSwitchState", roleswitchstate); // this will tell our UI if we are in a role swapped state or not
 			
 			int tabDisplayLabel = 1;
@@ -950,51 +925,42 @@ public class SiteHandler extends WorksiteHandler
 
 			if (loggedIn) 
 			{
-				Preferences prefs = PreferencesService.getPreferences(session.getUserId());
-				ResourceProperties props = prefs.getProperties(org.sakaiproject.user.api.PreferencesService.SITENAV_PREFS_KEY);
+				Preferences prefs = preferencesService.getPreferences(session.getUserId());
+				ResourceProperties props = prefs.getProperties(PreferencesService.SITENAV_PREFS_KEY);
 
-				try 
-				{
+				try {
 					tabDisplayLabel = (int) props.getLongProperty("tab:label");
-				} 
-				catch (Exception any) 
-				{
-					tabDisplayLabel = 1;
+				} catch (Exception e) {
+					log.debug("no property named tab:label, {}", e.toString());
 				}
 
 				try {
 					sidebarCollapsed = props.getBooleanProperty(PortalConstants.PROP_SIDEBAR_COLLAPSED);
-				} catch (org.sakaiproject.entity.api.EntityPropertyNotDefinedException any) {
-					sidebarCollapsed = false;
-				} catch (org.sakaiproject.entity.api.EntityPropertyTypeException any) {
-					log.warn("Exception caught whilst getting sidebarCollapsed: {}", any.toString());
+                } catch (Exception e) {
+					log.warn("Exception caught whilst getting sidebarCollapsed, {}", e.toString());
 				}
 
 				try {
 					currentExpanded = props.getBooleanProperty(PortalConstants.PROP_CURRENT_EXPANDED);
 					expandedSite = props.getProperty(PortalConstants.PROP_EXPANDED_SITE);
-				} catch (org.sakaiproject.entity.api.EntityPropertyNotDefinedException any) {
-					currentExpanded = false;
-				} catch (org.sakaiproject.entity.api.EntityPropertyTypeException any) {
-					log.warn("Exception caught whilst getting currentExpanded: {}", any.toString());
+                } catch (Exception e) {
+					log.warn("Exception caught whilst getting currentExpanded, {}", e.toString());
 				}
 
 
 				try {
 					toolMaximised = props.getBooleanProperty("toolMaximised");
-				} catch (org.sakaiproject.entity.api.EntityPropertyNotDefinedException any) {
-					toolMaximised = false;
-				} catch (org.sakaiproject.entity.api.EntityPropertyTypeException any) {
-					log.warn("Exception caught whilst getting toolMaximised: {}", any.toString());
+                } catch (Exception e) {
+					log.warn("Exception caught whilst getting toolMaximised, {}", e.toString());
 				}
 			}
 
 			rcontext.put("tabDisplayLabel", tabDisplayLabel);
-			rcontext.put(PortalConstants.PROP_SIDEBAR_COLLAPSED, Boolean.valueOf(sidebarCollapsed));
+			rcontext.put(PortalConstants.PROP_SIDEBAR_COLLAPSED, sidebarCollapsed);
 			if (expandedSite.equals(siteId)) {
-				rcontext.put(PortalConstants.PROP_CURRENT_EXPANDED, Boolean.valueOf(currentExpanded));
+				rcontext.put(PortalConstants.PROP_CURRENT_EXPANDED, currentExpanded);
 			}
-			rcontext.put("toolMaximised", Boolean.valueOf(toolMaximised));
+			rcontext.put("toolMaximised", toolMaximised);
 			
 			SiteView siteView = portal.getSiteHelper().getSitesView(
 					SiteView.View.DHTML_MORE_VIEW, req, session, siteId);
@@ -1005,19 +971,19 @@ public class SiteHandler extends WorksiteHandler
 			String cssClass = (siteType != null) ? "siteNavWrap " + siteType : "siteNavWrap";
 			rcontext.put("tabsCssClass", cssClass);
 
-			rcontext.put("tabsAddLogout", Boolean.valueOf(addLogout));
+			rcontext.put("tabsAddLogout", addLogout);
 			if (addLogout)
 			{
 				String logoutUrl = RequestFilter.serverUrl(req)
-						+ ServerConfigurationService.getString("portalPath")
+						+ serverConfigurationService.getString("portalPath")
 						+ "/logout_gallery";
 				rcontext.put("tabsLogoutUrl", logoutUrl);
 			}
 
 			boolean allowAddSite = false;
-			if(SiteService.allowAddCourseSite()) {
+			if(siteService.allowAddCourseSite()) {
 				allowAddSite = true;
-			} else if (SiteService.allowAddProjectSite()) {
+			} else if (siteService.allowAddProjectSite()) {
 				allowAddSite = true;
 			}
 
@@ -1034,13 +1000,13 @@ public class SiteHandler extends WorksiteHandler
 		String commonToolId = siteTool.getToolId();
 		boolean matched = false;
 		// Check the URL for a pattern match
-		String pattern = null;
-		Pattern p = null;
-		Matcher m = null;
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_URL_PROP, DEFAULT_BYPASS_URL);
-		pattern = ServerConfigurationService .getString(BYPASS_URL_PROP, pattern);
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_URL_PROP+"."+commonToolId, pattern);
-		pattern = ServerConfigurationService .getString(BYPASS_URL_PROP+"."+commonToolId, pattern);
+		String pattern;
+		Pattern p;
+		Matcher m;
+		pattern = serverConfigurationService.getString(LEGACY_BYPASS_URL_PROP, DEFAULT_BYPASS_URL);
+		pattern = serverConfigurationService.getString(BYPASS_URL_PROP, pattern);
+		pattern = serverConfigurationService.getString(LEGACY_BYPASS_URL_PROP + "." + commonToolId, pattern);
+		pattern = serverConfigurationService.getString(BYPASS_URL_PROP + "." + commonToolId, pattern);
 		if ( pattern.length() > 1 ) {
 			p = Pattern.compile(pattern);
 			m = p.matcher(uri.toLowerCase());
@@ -1050,10 +1016,10 @@ public class SiteHandler extends WorksiteHandler
 		}
 
 		// Check the query string for a pattern match
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_QUERY_PROP, DEFAULT_BYPASS_QUERY);
-		pattern = ServerConfigurationService .getString(BYPASS_QUERY_PROP, pattern);
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_QUERY_PROP+"."+commonToolId, pattern);
-		pattern = ServerConfigurationService .getString(BYPASS_QUERY_PROP+"."+commonToolId, pattern);
+		pattern = serverConfigurationService.getString(LEGACY_BYPASS_QUERY_PROP, DEFAULT_BYPASS_QUERY);
+		pattern = serverConfigurationService.getString(BYPASS_QUERY_PROP, pattern);
+		pattern = serverConfigurationService.getString(LEGACY_BYPASS_QUERY_PROP + "." + commonToolId, pattern);
+		pattern = serverConfigurationService.getString(BYPASS_QUERY_PROP + "." + commonToolId, pattern);
 		String queryString = req.getQueryString();
 		if ( queryString == null ) queryString = "";
 		if ( pattern.length() > 1 ) {
@@ -1064,8 +1030,7 @@ public class SiteHandler extends WorksiteHandler
 			}
 		}
 
-		// wicket-ajax request can not be buffered (PRFL-405)
-		if (Boolean.valueOf(req.getHeader("wicket-ajax"))) {
+		if (Boolean.parseBoolean(req.getHeader("wicket-ajax"))) {
 			matched = true;
 		}
 		return matched;
@@ -1074,37 +1039,30 @@ public class SiteHandler extends WorksiteHandler
 	/*
 	 * Check to see if this tool allows the buffering of content
 	 */
-	public boolean allowBufferContent(HttpServletRequest req, Site site, ToolConfiguration siteTool)
-	{
-		String tidAllow = ServerConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
-		tidAllow = ServerConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
+	public boolean allowBufferContent(Site site, ToolConfiguration siteTool) {
+		String tidAllow = serverConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
+		tidAllow = serverConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
 
-		if (tidAllow.indexOf(":none:") >= 0) return false;
+		if (tidAllow.contains(":none:")) return false;
 
 		// JSR-168 portlets do not operate in iframes
 		if ( portal.isPortletPlacement(siteTool) ) return false;
 
 		// If the property is set and :all: is not specified, then the 
 		// tools in the list are the ones that we accept
-		if (tidAllow.trim().length() > 0 && tidAllow.indexOf(":all:") < 0)
-		{
-			if (tidAllow.indexOf(siteTool.getToolId()) < 0) return false;
+		if (!tidAllow.trim().isEmpty() && !tidAllow.contains(":all:")) {
+			if (!tidAllow.contains(siteTool.getToolId())) return false;
 		}
 
 		// If the property is set and :all: is specified, then the 
 		// tools in the list are the ones that we render the old way
-		if (tidAllow.indexOf(":all:") >= 0)
-		{
-			if (tidAllow.indexOf(siteTool.getToolId()) >= 0) return false;
+		if (tidAllow.contains(":all:")) {
+			if (tidAllow.contains(siteTool.getToolId())) return false;
 		}
 
 		// Need to make sure the user is allowed to visit this tool
-		ToolManager toolManager = (ToolManager) ComponentManager.get(ToolManager.class.getName());
-		boolean allowedUser = toolManager.allowTool(site, siteTool);
-		if ( ! allowedUser ) return false;
-
-		return true;
-	}
+        return toolManager.allowTool(site, siteTool);
+    }
 
 	/*
 	 * Optionally actually grab the tool's output and include it in the same
@@ -1124,11 +1082,11 @@ public class SiteHandler extends WorksiteHandler
 		try {
 			// Prepare the session for the tools.  Handles session reset, reseturl
 			// and helpurl for neo tools - we don't need the returned map
-			Map discard = portal.includeTool(res, req, siteTool, true);
+			portal.includeTool(res, req, siteTool, true);
 
 			boolean retval = doToolBuffer(req, bufferedResponse, session, placementId,
 					toolContextPath, toolPathInfo);
-			log.debug("bufferContent retval="+retval);
+			log.debug("bufferContent retval={}", retval);
 
 			if ( ! retval ) return Boolean.FALSE;
 
@@ -1137,11 +1095,11 @@ public class SiteHandler extends WorksiteHandler
 
 			// Check the response contentType for a pattern match
 			String commonToolId = siteTool.getToolId();
-			String pattern = ServerConfigurationService .getString(LEGACY_BYPASS_TYPE_PROP, DEFAULT_BYPASS_TYPE);
-			pattern = ServerConfigurationService .getString(BYPASS_TYPE_PROP, pattern);
-			pattern = ServerConfigurationService .getString(LEGACY_BYPASS_TYPE_PROP+"."+commonToolId, pattern);
-			pattern = ServerConfigurationService .getString(BYPASS_TYPE_PROP+"."+commonToolId, pattern);
-			if ( pattern.length() > 0 ) {
+			String pattern = serverConfigurationService .getString(LEGACY_BYPASS_TYPE_PROP, DEFAULT_BYPASS_TYPE);
+			pattern = serverConfigurationService.getString(BYPASS_TYPE_PROP, pattern);
+			pattern = serverConfigurationService.getString(LEGACY_BYPASS_TYPE_PROP + "." + commonToolId, pattern);
+			pattern = serverConfigurationService.getString(BYPASS_TYPE_PROP + "." + commonToolId, pattern);
+			if (!pattern.isEmpty()) {
 				String contentType = res.getContentType();
 				if ( contentType == null ) contentType = "";
 				Pattern p = Pattern.compile(pattern);
@@ -1152,14 +1110,14 @@ public class SiteHandler extends WorksiteHandler
 			log.warn("Failed to buffer content.", e);
 			return Boolean.FALSE;
 		}
-		String tidAllow = ServerConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
-		tidAllow = ServerConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
+		String tidAllow = serverConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
+		tidAllow = serverConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
 		boolean debug = tidAllow.contains(":debug:");
 
 		String responseStr = bufferedResponse.getInternalBuffer();
-		if (responseStr == null || responseStr.length() < 1) return Boolean.FALSE;
+		if (responseStr == null || responseStr.isEmpty()) return Boolean.FALSE;
 
-		PageParts pp = parseHtmlParts(responseStr, debug);
+		PageParts pp = parseHtmlParts(responseStr);
 		if (pp != null)
 		{
 			if (debug)
@@ -1191,11 +1149,9 @@ public class SiteHandler extends WorksiteHandler
 	/**
 	 * Attempts to find the HTML head and body in the document and return them back.
 	 * @param responseStr The HTML to be parse
-	 * @param debug If <code>true</code> then log where we found the head and body.
-	 *
 	 * @return <code>null</code> if we failed to parse the page or a PageParts object.
 	 */
-	PageParts parseHtmlParts(String responseStr, boolean debug) {
+	PageParts parseHtmlParts(String responseStr) {
 		// We can't lowercase the string and search in it as then the offsets don't match when a character is a
 		// different length in upper and lower case
 		int headStart = StringUtils.indexOfIgnoreCase(responseStr, "<head");
@@ -1214,8 +1170,7 @@ public class SiteHandler extends WorksiteHandler
 		// start tag we simply - take the rest of the response
 		if ( bodyEnd < bodyStart ) bodyEnd = responseStr.length() - 1;
 
-		if(debug)
-			log.info("Frameless HS="+headStart+" HE="+headEnd+" BS="+bodyStart+" BE="+bodyEnd);
+		log.debug("Frameless HS={} HE={} BS={} BE={}", headStart, headEnd, bodyStart, bodyEnd);
 
 		if (bodyEnd > bodyStart && bodyStart > headEnd && headEnd > headStart
 				&& headStart > 1) {
@@ -1257,14 +1212,14 @@ public class SiteHandler extends WorksiteHandler
 		if (portal.redirectIfLoggedOut(res)) return false;
 
 		// find the tool from some site
-		ToolConfiguration siteTool = SiteService.findTool(placementId);
+		ToolConfiguration siteTool = siteService.findTool(placementId);
 		if (siteTool == null)
 		{
 			return false;
 		}
 
 		// find the tool registered for this
-		ActiveTool tool = ActiveToolManager.getActiveTool(siteTool.getToolId());
+		ActiveTool tool = toolManager.getActiveTool(siteTool.getToolId());
 		if (tool == null)
 		{
 			return false;
@@ -1277,7 +1232,7 @@ public class SiteHandler extends WorksiteHandler
 
 			try
 			{
-				SiteService.getSiteVisit(siteTool.getSiteId());
+				siteService.getSiteVisit(siteTool.getSiteId());
 			}
 			catch (IdUnusedException e)
 			{
@@ -1290,10 +1245,9 @@ public class SiteHandler extends WorksiteHandler
 			}
 		}
 
-		log.debug("doToolBuffer siteTool="+siteTool+" TCP="+toolContextPath+" TPI="+toolPathInfo);
+		log.debug("doToolBuffer siteTool={} TCP={} TPI={}", siteTool, toolContextPath, toolPathInfo);
 
-		portal.forwardTool(tool, req, res, siteTool, siteTool.getSkin(), toolContextPath,
-				toolPathInfo);
+		portal.forwardTool(tool, req, res, siteTool, siteTool.getSkin(), toolContextPath, toolPathInfo);
 
 		return true;
 	}
